# imagenet_specialization

./: .gitignore  README.md  codex_instructions.md  config_structs.py  main.py  pyproject.toml  requirements.txt
conf/: config.yaml  exchangeability_manifest.csv  exchangeability_manifest_timing_sparse.csv  timing_by_width_pinned_20260304.csv
notebooks/: exchangeability_analysis.ipynb  exchangeability_plots.ipynb
scripts/: alpha_test.py  analyze_exchangeability.py  analyze_layerwise_weight_w1.py  bootstrap_cluster_dirs.sh  build_cifar5m_sweep.py  build_cifar_resnet_sweep.py  build_exchangeability_manifest.py  build_imagenet_sweep.py  build_width_slurm_jobs.py  cluster_env.sh  collect_stats.py  compare_exchangeability_datasets.py  download_cifar5m.py  download_cifar5m.sh  download_imagenet.sh  download_imagenet_hf.py  merge_exchangeability_analysis_csvs.py  merge_layerwise_weight_w1_csvs.py  plot_exchangeability.py  plot_imagenet.ipynb  prepare_imagenet_archives.py  run_largest_smoke.py  run_manifest_row.py  run_timing_manifest_row.py  submit_exchangeability_analysis_slurm.sh  submit_exchangeability_slurm.sh  submit_fast_tests_slurm.sh  submit_largest_smoke_pytest_slurm.sh  submit_largest_smoke_slurm.sh  submit_layerwise_weight_w1_slurm.sh  submit_timing_sweep_slurm.sh  summarize_timing_sweep.py
test/: test_analyze_exchangeability_empirical_pvalues.py  test_analyze_exchangeability_run_id_resolution.py  test_analyze_exchangeability_weights.py  test_analyze_layerwise_weight_w1.py  test_build_cifar5m_sweep.py  test_build_width_slurm_jobs.py  test_cifar5m_data.py  (+15 more)
(+82 files in other folders)
