[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu_scheduler"
version = "1.1.0"
description = "ImageNet exchangeability pipeline"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "flatdict>=4.0.1",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "tqdm>=4.66.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
local = [
  "jax[cpu]==0.4.38",
  "chex>=0.1.89",
  "flax>=0.10.2",
  "optax>=0.2.4",
  "orbax-checkpoint>=0.11.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "pytest>=8.0.0",
  "ipykernel>=6.29.0",
]
cluster = [
  "jax[cuda12]==0.4.38",
  "chex>=0.1.89",
  "flax>=0.10.2",
  "optax>=0.2.4",
  "orbax-checkpoint>=0.11.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "pytest>=8.0.0",
  "ipykernel>=6.29.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["test"]
